# windsurf-teacher

./: .copier-answers.yml  .env.example  .envrc  .gitignore  .lychee.toml  .markdownlint.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_TEMPLATE.md  SECURITY.md  SKILL.md  hooks.json  install.py  learn-review.md  mkdocs.yml  prek.toml  pyproject.toml  uninstall.py
.github/: FUNDING.yml  actionlint.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug.md  2-feature.md  3-docs.md  4-change.md  config.yml
.github/workflows/: ci.yml  copier-update.yml  issue-triage.yml  release.yml
docs/.overrides/partials/: comments.html
docs/reference/: api.md
scripts/: check-pathlib-encoding.py  check-template-update.sh
src/windsurf_teacher/: __init__.py  cli.py  db.py  installer.py  mcp_server.py
src/windsurf_teacher/hooks/: capture_session.py
tests/: test_cli.py  test_db.py  test_hooks.py  test_installer.py  test_mcp_server.py
